tests/errors/sem.must-be-positive.arr-size.or
main :: () -> void {
    [-1]int;
};
